--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         <h2>Student of Software Design</h2>
         <h3>Machine Problems</h3>
         <div class="mp">
-            <a href="../Bionote/bio.html" type="button">Machine Problem 1</a>
-                <a href="../Bionote/mp2.html" type="button">Machine Problem 2</a>                    
+            <a href="https://jcorteeeeez.github.io/cortezncp3106/bio.html" type="button">Machine Problem 1</a>
+                <a href="https://jcorteeeeez.github.io/cortezncp3106/mp2.html" type="button">Machine Problem 2</a>                    
         </div>
     </div>
 </body>
