--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <div class="profile">
-        <img src="../Bionote/jcortez.jpg" alt="Johannes Cortez" class="box-img" height="400" width="400">
+        <img src="https://jcorteeeeez.github.io/cortezncp3106/jcortez.jpg" alt="Johannes Cortez" class="box-img" height="400" width="400">
         <h1>Johannes Christopher O. Cortez</h1>
         <h2>Student of Software Design</h2>
         <h3>Machine Problems</h3>
