Updated the picture

--- a/mp2.html
+++ b/mp2.html
@@ -15,7 +15,7 @@
 
 <body>
     <div class="profile">
-        <img src="../Bionote/jcortez.jpg" alt="Johannes Cortez" class="box-img" height="400" width="400">
+        <img src="https://jcorteeeeez.github.io/cortezncp3106/jcortez.jpg" alt="Johannes Cortez" class="box-img" height="400" width="400">
         <h1>Johannes Christopher O. Cortez</h1>
         <h2>Student of Software Design</h2>
         <p>Hi ! I'm Johannes Christopher O. Cortez.A third year student of Bachelor of Science in Computer Engineering.
