--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         <h3>Machine Problems</h3>
         <div class="mp">
             <a href="https://jcorteeeeez.github.io/cortezncp3106/bio.html" type="button">Machine Problem 1</a>
-                <a href="https://jcorteeeeez.github.io/cortezncp3106/mp2.html" type="button">Machine Problem 2</a>                    
+                <a href="https://jcorteeeeez.github.io/cortezncp3106/mp2.html" type="button">Machine Problem 2</a>
+                   <a href="https://jcorteeeeez.github.io/cortezncp3106/" type="button">Machine Problem 3</a>
         </div>
     </div>
 </body>
